Updating posts; adding PSWA solution writeups.